[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-oa3-client"
version = "0.4.0"
description = "OpenADR 3 companion client with VEN registration, MQTT notifications, and lifecycle management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Grid-Coordination Contributors"}
]
keywords = ["openadr", "openadr3", "mqtt", "ven", "demand-response"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openadr3>=0.3.0",
]

[project.optional-dependencies]
mqtt = ["ebus-mqtt-client>=0.1.0"]
webhooks = ["flask>=3.0.0"]
mdns = ["zeroconf>=0.131.0"]
all = ["ebus-mqtt-client>=0.1.0", "flask>=3.0.0", "zeroconf>=0.131.0"]
dev = ["pytest", "ruff>=0.15.0", "ebus-mqtt-client>=0.1.0", "flask>=3.0.0", "zeroconf>=0.131.0"]

[project.urls]
Homepage = "https://grid-coordination.energy"
Repository = "https://github.com/grid-coordination/python-oa3-client"
Issues = "https://github.com/grid-coordination/python-oa3-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openadr3_client"]

[tool.hatch.build]
exclude = [
    "CLAUDE.md",
    "AGENTS.md",
    ".claude/",
    ".beads/",
    "examples/",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".beads", "examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests
